# irl-gaslight

./: .gitignore  README.md  irl-gaslight.cmd  pyproject.toml
irl_gaslight/: __init__.py  identity_adapter.py  main.py
irl_gaslight/data/: boundaries.json  comebacks.json  daily.json  scenarios.json  tactics.json  title.ansi  title_compact.ansi
irl_identity/: __init__.py  avatars.py  cli.py  first_run.py  oauth.py  profile.py  ui.py
ml/: DATASET_CARD.md  MODEL_CARD.md  README.md  infer_5m.py  requirements-colab.txt  train_5m.py
notebooks/: train_irl_gaslight_5m.ipynb
tests/: test_cli.py  test_ml.py
