[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "irl-gaslight"
version = "0.1.0"
authors = [
  { name = "Anika Mukherjee", email = "cuteypieanika@gmail.com" },
]
description = "A defensive communication CLI for spotting manipulation, holding boundaries, and answering bullies without becoming one."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
dependencies = [
  "rich>=13.7",
  "questionary>=2.0",
  "pyperclip>=1.8",
  "typer>=0.12,<1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Education",
]

[project.scripts]
irl-gaslight = "irl_gaslight.main:app"

[project.urls]
Homepage = "https://github.com/Dev2Creator"
Repository = "https://github.com/Dev2Creator/irl-gaslight"

[tool.setuptools.package-data]
irl_gaslight = ["data/*.json", "data/*.ansi"]

[tool.pytest.ini_options]
testpaths = ["tests"]